--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -18,7 +18,7 @@ jobs:
           # the below token should have repo scope and must be manually added by you in the repository's secret
           PERSONAL_ACCESS_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
-          path-to-signatures: 'signatures/version1/cla.json'
+          path-to-signatures: 'signatures.json'
           path-to-document: 'https://gist.githubusercontent.com/darrellwarde/9c9a35156ffbfed471fec8ed5350c7d5/raw/ed25da406effe7aae14c0b5d688c85e16152b132/cla.md' # e.g. a CLA or a DCO document
           # branch should not be protected
           branch: 'main'
