--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -22,7 +22,7 @@ jobs:
           path-to-document: 'https://gist.githubusercontent.com/darrellwarde/9c9a35156ffbfed471fec8ed5350c7d5/raw/ed25da406effe7aae14c0b5d688c85e16152b132/cla.md' # e.g. a CLA or a DCO document
           # branch should not be protected
           branch: 'main'
-          allowlist: user1,bot*
+          #allowlist: user1,bot*
 
          # the followings are the optional inputs - If the optional inputs are not given, then default values will be taken
           remote-organization-name: neo4j
